# course_tdd_celery_fastapi

./: db.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.env/: .dev-sample
alembic/: env.py
alembic/versions/: 157bb8d4ca51_.py  f8fb7ce24c44_.py
compose/local/fastapi/: Dockerfile  start
project/: app.py  config.py
project/users/: models.py  router.py  schemas.py  tasks.py  views.py
project/users/templates/: form.html
project/ws/: router.py  views.py
