[project]
name = "course-tdd-celery-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "celery>=5.5.1",
    "fastapi[standard]>=0.115.12",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "flower>=2.0.1",
]
