[project]
name = "course-tdd-celery-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "celery>=5.5.1",
    "fastapi[standard]>=0.115.12",
    "flower>=2.0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = []
